Make propagation timeout configurable

--- a/nsupdate.conf
+++ b/nsupdate.conf
@@ -12,3 +12,7 @@ UACME_NSUPDATE_SERVER=
 # Port to use for sending updates.
 # If not specified the default port will be used.
 UACME_NSUPDATE_PORT=
+
+# Time in seconds to wait for propagation.
+# If not specified it is the zone REFRESH + RETRY.
+UACME_PROPAGATION_TIMEOUT=
